# dr-stynx-os

./: .gitignore  EXTERNAL-SETUP.md  README.md  dr-stynx-os-status.sh  dr-stynx-os-watchdog.sh  frontend.html  host-setup.sh  pyproject.toml  test_http_server.py  watchdog.sh
src/dr_stynx_os/: gpu.py  heartbeat_manager.py  http_server.py  memory.py  server.py  state.py
